[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "starlit"
version = "0.1.0"
dependencies = [
    "python-dotenv",
    "requests",
    "rich",
    "terminaltexteffects",
    "rich-gradient",
]

[project.scripts]
starlit = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"