[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "starlit"
version = "0.1.0"
description = "A minimal, cute and customizable weather cli"
dependencies = [
    "python-dotenv",
    "requests",
    "rich",
    "terminaltexteffects",
    "rich-gradient",
]

[project.scripts]
starlit = "starlit.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"