[tool.poetry]
name = "starlit"
version = "0.1.0"
description = "A minimal, cute and customizable weather cli"
authors = ["ashuhlee"]
readme = "README.md"
packages = [{ include = "starlit", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-dotenv = "*"
requests = "*"
rich = "*"
terminaltexteffects = "*"
rich-gradient = "*"

[tool.poetry.scripts]
starlit = "starlit.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
